Update some js code for mobile

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div class="content">
         <div class="input1">
             <input id="input2" class="inputt" type="text" placeholder="Enter Your Guess Number">
-            <input id="input2" class="input2" type="text" placeholder="Enter Your Number">
-            <input id="input2" class="input3" type="text" placeholder="Enter Number">
+            <!-- <input id="input2" class="input2" type="text" placeholder="Enter Your Number">
+            <input id="input2" class="input3" type="text" placeholder="Enter Number"> -->
         </div>
         <div class="button1">
           <input type="submit" value="Enter" class="button" id="button" onclick="guessTheNumber()">
